2003-11-06  Christopher Faylor  <cgf@redhat.com>

	* winsup.h: Declare access_worker.

2003-11-05  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/types.h: Fix preprocessor guards for vm_offset_t and
	vm_size_t.  Add typedef for vm_object_t.

2003-11-05  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Detect attempt
	to open a directory which lacks read privileges.

2003-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* external.cc (cygwin_internal): Add CW_GET_POSIX_SECURITY_ATTRIBUTE
	handling.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add
	CW_GET_POSIX_SECURITY_ATTRIBUTE.

	* exceptions.cc (init_global_security): Move from here...
	* sec_helper.cc (init_global_security): ...to here.

2003-11-04  Christopher Faylor  <cgf@redhat.com>

	* net.cc (dup_ent): Use IsBadStringPtr for alignment checks.  Don't use
	a known bad pointer.

2003-11-03  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (dup_ent): Move Win 95 misalignment recogition before
	trying to evaluate string length.

2003-10-31  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.cc (pthread::thread_init_wrapper): Initialize exception
	handling.

2003-10-31  Thomas Pfaff  <tpfaff@gmx.net>

	Rename pthread::running to pthread::valid throughout.

	* thread.h: (pthread::suspend_all_except_self): New static method.
	(pthread::resume_all): Ditto.
	(pthread::suspend_except_self): New method.
	(pthread::resume): Ditto.
	* thread.cc (pthread::suspend_except_self): Implement.
	(pthread::resume): Ditto.

2003-10-29  Danny Smith  <dannysmith@users.sourceforege.net>

	* include/stdint.h: Prevent signed->unsigned conversion for 32 and
	64 bit min value constants.

2003-10-28  Igor Pechtchanski  <pechtcha@cs.nyu.edu>

	* path.cc (dot_special_chars): New global variable.
	(special_name): Make files ending in "." special.
	(fnunmunge): Allow encoded ".".
	(mount_item::fnmunge): Handle trailing ".".
