@@ -224,13 +224,14 @@ details. */
        97: Export sem_open, sem_close, sem_timedwait, sem_getvalue.
        98: Export _tmpfile64.
        99: CW_GET_POSIX_SECURITY_ATTRIBUTE addition to external.cc.
+      100: CW_GET_SHMLBA addition to external.cc.
 
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 99
+#define CYGWIN_VERSION_API_MINOR 100
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
